# sentinel

./: .gitignore  README.md  build.gradle  project-plan-and-roadmap.md  pyproject.toml  settings.gradle  sonar-project.properties
.github/workflows/: build.yml
core/app/: build.gradle
core/app/src/main/java/sentinel/app/: App.java
core/app/src/test/java/sentinel/app/: AppTest.java
ml/sample-ml-proj-0/: main.py  pyproject.toml
ml/sample-ml-proj-0/src/: index.py
ml/sample-ml-proj-0/test/: test_index.py
