[project]
name = "broker-risk-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
]

[tool.uv.workspace]
members = ["ml/*"]

[tool.pytest.ini_options]
testpaths = ["ml"]
python_files = "test_*.py"
# Add default flags so you don't have to type them every time
addopts = "--strict-markers --import-mode=importlib"

[tool.coverage.run]
branch = true
source = ["ml"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:"
]
